# ca1d

./: Cargo.toml  readme.md  search.sh
src/: lib.rs  main.rs
tests/: codes.rs  rule30.rs
