[package]
name = "ca1d"
version = "0.1.0"
authors = ["Patrick McCormick <patm.mail@gmail.com>"]
edition = "2021"
default-run = "ca1d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ca1d"
path = "src/lib.rs"

[[bin]]
name = "ca1d"
path = "src/main.rs"

[[bin]]
name = "ca1d_graph"
path = "src/graph.rs"

[[bin]]
name = "cycler"
path = "src/cycler.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
term_size = "0.3.2"
termcolor = "1.4.1"
png = "0.18.0"
rand = "0.9.2"
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = "0.2.19"
convert-base = "1.1.2"
